--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,19 +14,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <%# Font Awesome CSS %>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <%# Our Custom CSS (Load after libraries to allow overrides) %>
-    <link rel="stylesheet" href="/css/style.css">
+    <%# Custom CSS removed to rely on Bootstrap %>
+    <%# Link practice-specific animations %>
+    <link rel="stylesheet" href="/css/practice-animations.css">
 </head>
 <body>
-    <nav class="navbar"> <%# Removed navbar-expand-lg bg-body-tertiary mb-4 %>
+    <nav class="navbar navbar-expand-lg mb-4"> <%# Removed fixed navbar-light bg-light to allow theme switching %>
         <div class="container"> <%# Wrap navbar content in container %>
             <a class="navbar-brand" href="/">Typing Trainer</a>
-            <%# Add toggler for small screens (optional, needs Bootstrap JS) %>
-            <%# <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> %>
-            <%#   <span class="navbar-toggler-icon"></span> %>
-            <%# </button> %>
-            <div> <%# Removed collapse navbar-collapse justify-content-end id="navbarNav" %>
-                <ul class="navbar-nav">
+            <%# Toggler button for small screens %>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav"> <%# Added classes and ID for collapse %>
+                <ul class="navbar-nav ms-auto align-items-center"> <%# Added ms-auto and align-items-center %>
+                    <%# Theme Toggle Button %>
+                    <li class="nav-item me-2">
+                        <button id="theme-toggle-btn" class="btn btn-sm btn-outline-secondary" type="button" title="Toggle theme">
+                            <i id="theme-icon" class="fas fa-sun"></i> <%# Default to sun icon %>
+                        </button>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
@@ -56,5 +63,5 @@
             </div>
         </div>
     </nav>
-    <main class="container mt-4"> <%# Add margin-top back for spacing %>
+    <main class="container mt-4 py-5"> <%# Add vertical padding for more content separation %>
         <%# Page content will be injected here by including footer %>
