--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,15 +5,18 @@
     <p>Welcome, <%= user ? user.username : 'Guest' %>!</p>
 
     <%# User stats will be displayed here %>
-    <div id="user-stats">
-        <h3>Your Statistics</h3>
-        <% if (stats) { %>
-            <p>Texts Practiced: <%= stats.textsPracticed %></p>
-            <p>Total Practice Time: <%= stats.totalPracticeTime %></p> <%# Example stat %>
-            <p>Average Accuracy: <%= stats.averageAccuracy %>%</p> <%# Example stat %>
-        <% } else { %>
-            <p>No statistics available yet. Start practicing!</p>
-        <% } %>
+    <%# Wrap stats in a Bootstrap card %>
+    <div id="user-stats" class="card">
+        <div class="card-body">
+            <h3 class="card-title">Your Statistics</h3>
+            <% if (stats) { %>
+                <p class="card-text">Texts Practiced: <%= stats.textsPracticed %></p>
+                <p class="card-text">Total Practice Time: <%= stats.totalPracticeTime %></p> <%# Example stat %>
+                <p class="card-text">Average Accuracy: <%= stats.averageAccuracy %>%</p> <%# Example stat %>
+            <% } else { %>
+                <p class="card-text">No statistics available yet. Start practicing!</p>
+            <% } %>
+        </div>
     </div>
 
 </div>
