Refactor: Extract practice.js logic into modules\n\n- Created textUtils.js, statsUtils.js, domUtils.js, apiUtils.js\n- Updated practice.js to use modules\n- Updated practice.ejs to load script as module\n\nFix: Improve practice text line splitting\n\n- Implemented direct measurement for line width calculation\n- Added resize listener to recalculate width dynamically\n- Adjusted calculation buffer for accurate wrapping

--- a/views/practice.ejs
+++ b/views/practice.ejs
@@ -56,4 +56,4 @@
 <%- include('partials/footer') %>
 
 <!-- Include client-side JS for practice logic -->
-<script src="/js/practice.js"></script>
+<script type="module" src="/js/practice.js"></script>
